updated gitignore, loaded csv into dataframe

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,11 +2,428 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "750b6d7e",
+   "execution_count": 3,
+   "id": "53530254",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "plt.style.use('ggplot')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6a854295",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>can_id</th>\n",
+       "      <th>can_nam</th>\n",
+       "      <th>can_off</th>\n",
+       "      <th>can_off_sta</th>\n",
+       "      <th>can_off_dis</th>\n",
+       "      <th>can_par_aff</th>\n",
+       "      <th>can_inc_cha_ope_sea</th>\n",
+       "      <th>can_str1</th>\n",
+       "      <th>can_str2</th>\n",
+       "      <th>can_cit</th>\n",
+       "      <th>...</th>\n",
+       "      <th>cas_on_han_beg_of_per</th>\n",
+       "      <th>cas_on_han_clo_of_per</th>\n",
+       "      <th>net_con</th>\n",
+       "      <th>net_ope_exp</th>\n",
+       "      <th>deb_owe_by_com</th>\n",
+       "      <th>deb_owe_to_com</th>\n",
+       "      <th>cov_sta_dat</th>\n",
+       "      <th>cov_end_dat</th>\n",
+       "      <th>winner</th>\n",
+       "      <th>votes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>H2GA12121</td>\n",
+       "      <td>ALLEN, RICHARD W</td>\n",
+       "      <td>H</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>2237 PICKENS RD</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>AUGUSTA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$60,109.57</td>\n",
+       "      <td>$175,613.35</td>\n",
+       "      <td>$1,074,949.50</td>\n",
+       "      <td>$907,156.21</td>\n",
+       "      <td>$1,125,000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>158708.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>H6PA02171</td>\n",
+       "      <td>EVANS, DWIGHT</td>\n",
+       "      <td>H</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>CHALLENGER</td>\n",
+       "      <td>PO BOX 6578</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PHILADELPHIA</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$105,687.23</td>\n",
+       "      <td>$1,406,719.06</td>\n",
+       "      <td>$1,298,831.83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>11/2/2015</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>310770.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>H6FL04105</td>\n",
+       "      <td>RUTHERFORD, JOHN</td>\n",
+       "      <td>H</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>3817 VICKERS LAKE DRIVE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>JACKSONVILLE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$35,645.09</td>\n",
+       "      <td>$650,855.38</td>\n",
+       "      <td>$656,210.29</td>\n",
+       "      <td>$60,000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4/1/2016</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>286018.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>H4MT01041</td>\n",
+       "      <td>ZINKE, RYAN K</td>\n",
+       "      <td>H</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>409 2ND ST W</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WHITEFISH</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$83,815.78</td>\n",
+       "      <td>$399,122.61</td>\n",
+       "      <td>$4,938,943.74</td>\n",
+       "      <td>$5,055,942.15</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>280476.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>H8CA09060</td>\n",
+       "      <td>LEE, BARBARA</td>\n",
+       "      <td>H</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>409 13TH ST, 17TH FL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>OAKLAND</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$83,690.60</td>\n",
+       "      <td>$181,338.23</td>\n",
+       "      <td>$1,197,676.61</td>\n",
+       "      <td>$949,488.98</td>\n",
+       "      <td>$4,401.75</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>277390.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1809</th>\n",
+       "      <td>P60005931</td>\n",
+       "      <td>BUTTOCKS, SYDNEYS VOLUPTOUS</td>\n",
+       "      <td>P</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>143 HIGHLAND AVENUE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BUFFALO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "      <td>$5,000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3/3/2015</td>\n",
+       "      <td>3/31/2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810</th>\n",
+       "      <td>S6CA00568</td>\n",
+       "      <td>MOLNAR, ROBERT</td>\n",
+       "      <td>S</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>PO BOX 321231</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>LOS GATOS</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$1,000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$1,000.00</td>\n",
+       "      <td>$1,000.00</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1/1/2015</td>\n",
+       "      <td>3/31/2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811</th>\n",
+       "      <td>S6MD03524</td>\n",
+       "      <td>HOLMES, GREGORY</td>\n",
+       "      <td>S</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>13601 MACDERNUT CT</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>UPPER MARLBORO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8/29/2017</td>\n",
+       "      <td>2/1/2015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812</th>\n",
+       "      <td>H6AS00031</td>\n",
+       "      <td>HUNKIN-FINAU, VAITINASA SALU</td>\n",
+       "      <td>H</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PO BOX 252 VAILOAUTA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PAGO PAGO</td>\n",
+       "      <td>...</td>\n",
+       "      <td>$1,058.44</td>\n",
+       "      <td>$4,561.00</td>\n",
+       "      <td>$41,670.00</td>\n",
+       "      <td>$38,167.44</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7/1/2016</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
+       "      <td>H6AK00235</td>\n",
+       "      <td>LINDBECK, STEVE</td>\n",
+       "      <td>H</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>PO BOX 90025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ANCHORAGE</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>$64,115.92</td>\n",
+       "      <td>$876,316.81</td>\n",
+       "      <td>$792,150.89</td>\n",
+       "      <td>$13,979.83</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4/1/2016</td>\n",
+       "      <td>10/19/2016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1814 rows × 51 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         can_id                       can_nam can_off can_off_sta  \\\n",
+       "0     H2GA12121              ALLEN, RICHARD W       H          GA   \n",
+       "1     H6PA02171                 EVANS, DWIGHT       H          PA   \n",
+       "2     H6FL04105              RUTHERFORD, JOHN       H          FL   \n",
+       "3     H4MT01041                 ZINKE, RYAN K       H          MT   \n",
+       "4     H8CA09060                  LEE, BARBARA       H          CA   \n",
+       "...         ...                           ...     ...         ...   \n",
+       "1809  P60005931   BUTTOCKS, SYDNEYS VOLUPTOUS       P          US   \n",
+       "1810  S6CA00568                MOLNAR, ROBERT       S          CA   \n",
+       "1811  S6MD03524               HOLMES, GREGORY       S          MD   \n",
+       "1812  H6AS00031  HUNKIN-FINAU, VAITINASA SALU       H          AS   \n",
+       "1813  H6AK00235               LINDBECK, STEVE       H          AK   \n",
+       "\n",
+       "      can_off_dis can_par_aff can_inc_cha_ope_sea                 can_str1  \\\n",
+       "0            12.0         REP           INCUMBENT          2237 PICKENS RD   \n",
+       "1             2.0         DEM          CHALLENGER              PO BOX 6578   \n",
+       "2             4.0         REP                OPEN  3817 VICKERS LAKE DRIVE   \n",
+       "3             0.0         REP           INCUMBENT             409 2ND ST W   \n",
+       "4            13.0         DEM           INCUMBENT     409 13TH ST, 17TH FL   \n",
+       "...           ...         ...                 ...                      ...   \n",
+       "1809          0.0         IND                OPEN      143 HIGHLAND AVENUE   \n",
+       "1810          0.0         REP                OPEN            PO BOX 321231   \n",
+       "1811          0.0         REP                OPEN       13601 MACDERNUT CT   \n",
+       "1812          NaN         DEM                 NaN     PO BOX 252 VAILOAUTA   \n",
+       "1813          NaN         DEM                 NaN             PO BOX 90025   \n",
+       "\n",
+       "     can_str2         can_cit  ... cas_on_han_beg_of_per  \\\n",
+       "0         NaN         AUGUSTA  ...           $60,109.57    \n",
+       "1         NaN    PHILADELPHIA  ...                   NaN   \n",
+       "2         NaN    JACKSONVILLE  ...                   NaN   \n",
+       "3         NaN       WHITEFISH  ...           $83,815.78    \n",
+       "4         NaN         OAKLAND  ...           $83,690.60    \n",
+       "...       ...             ...  ...                   ...   \n",
+       "1809      NaN         BUFFALO  ...            $5,000.00    \n",
+       "1810      NaN       LOS GATOS  ...            $1,000.00    \n",
+       "1811      NaN  UPPER MARLBORO  ...                   NaN   \n",
+       "1812      NaN       PAGO PAGO  ...            $1,058.44    \n",
+       "1813      NaN       ANCHORAGE  ...                   NaN   \n",
+       "\n",
+       "      cas_on_han_clo_of_per         net_con     net_ope_exp  deb_owe_by_com  \\\n",
+       "0              $175,613.35   $1,074,949.50     $907,156.21   $1,125,000.00    \n",
+       "1              $105,687.23   $1,406,719.06   $1,298,831.83              NaN   \n",
+       "2               $35,645.09     $650,855.38     $656,210.29      $60,000.00    \n",
+       "3              $399,122.61   $4,938,943.74   $5,055,942.15              NaN   \n",
+       "4              $181,338.23   $1,197,676.61     $949,488.98       $4,401.75    \n",
+       "...                     ...             ...             ...             ...   \n",
+       "1809             $5,000.00              NaN             NaN             NaN   \n",
+       "1810                    NaN      $1,000.00       $1,000.00              NaN   \n",
+       "1811                    NaN             NaN             NaN             NaN   \n",
+       "1812             $4,561.00      $41,670.00      $38,167.44              NaN   \n",
+       "1813            $64,115.92     $876,316.81     $792,150.89      $13,979.83    \n",
+       "\n",
+       "     deb_owe_to_com cov_sta_dat cov_end_dat winner     votes  \n",
+       "0               NaN    1/1/2015  10/19/2016      Y  158708.0  \n",
+       "1               NaN   11/2/2015  10/19/2016      Y  310770.0  \n",
+       "2               NaN    4/1/2016  10/19/2016      Y  286018.0  \n",
+       "3               NaN    1/1/2015  10/19/2016      Y  280476.0  \n",
+       "4               NaN    1/1/2015  10/19/2016      Y  277390.0  \n",
+       "...             ...         ...         ...    ...       ...  \n",
+       "1809            NaN    3/3/2015   3/31/2015    NaN       NaN  \n",
+       "1810            NaN    1/1/2015   3/31/2015    NaN       NaN  \n",
+       "1811            NaN   8/29/2017    2/1/2015    NaN       NaN  \n",
+       "1812            NaN    7/1/2016  10/19/2016    NaN       NaN  \n",
+       "1813            NaN    4/1/2016  10/19/2016    NaN       NaN  \n",
+       "\n",
+       "[1814 rows x 51 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# load csv\n",
+    "\n",
+    "df = pd.read_csv(\"./CandidateSummaryAction1.csv\")\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f05c5e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we want to remove anyone who got 0 votes - also want to look for more tightly contested races as our question\n",
+    "# doesn't really pertain to unopposed or landslide campaigns"
+   ]
   }
  ],
  "metadata": {
