created roadmap for data analysis

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "53530254",
+   "id": "4691badc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6a854295",
+   "id": "55507b73",
    "metadata": {},
    "outputs": [
     {
@@ -417,12 +417,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f05c5e1",
+   "id": "3475459a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# we want to remove anyone who got 0 votes - also want to look for more tightly contested races as our question\n",
-    "# doesn't really pertain to unopposed or landslide campaigns"
+    "# doesn't really pertain to unopposed or landslide campaigns\n",
+    "\n",
+    "# aggregate based on candidate_incumbent_challenger_open_seat as one\n",
+    "# type of office cand_office for house/senate/pres\n",
+    "# can also group spending by states cand_office_st\n",
+    "# cand_office_dist might be interesting to see spending across a state\n",
+    "\n",
+    "# type of contributions - can compare individual_contribution\n",
+    "# other_committee_contribution - contributions from pacs/other candidates\n",
+    "# cand_contribution - from self\n",
+    "# party_committee_contribution - from state/national party committees\n",
+    "# total contribution\n",
+    "# coverage_start_date - when a candidate started reporting finances note- dates are from 1/1/2015 - 10/19/2016\n",
+    "# winner column represents if that candidate won - can be represented with boolean"
    ]
   }
  ],
