parsed data frame for columns relevant for my question

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "4691badc",
+   "execution_count": 2,
+   "id": "32076755",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "55507b73",
+   "execution_count": 3,
+   "id": "d0764cc1",
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "[1814 rows x 51 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3475459a",
+   "id": "1c5b47c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,232 @@
     "# party_committee_contribution - from state/national party committees\n",
     "# total contribution\n",
     "# coverage_start_date - when a candidate started reporting finances note- dates are from 1/1/2015 - 10/19/2016\n",
-    "# winner column represents if that candidate won - can be represented with boolean"
+    "# winner column represents if that candidate won - can be represented with boolean\n",
+    "# is there a correlation between spending and cook partisan index(do this later)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "1ab8b9dc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['can_id', 'can_nam', 'can_off', 'can_off_sta', 'can_off_dis',\n",
+       "       'can_par_aff', 'can_inc_cha_ope_sea', 'can_str1', 'can_str2', 'can_cit',\n",
+       "       'can_sta', 'can_zip', 'ind_ite_con', 'ind_uni_con', 'ind_con',\n",
+       "       'par_com_con', 'oth_com_con', 'can_con', 'tot_con',\n",
+       "       'tra_fro_oth_aut_com', 'can_loa', 'oth_loa', 'tot_loa',\n",
+       "       'off_to_ope_exp', 'off_to_fun', 'off_to_leg_acc', 'oth_rec', 'tot_rec',\n",
+       "       'ope_exp', 'exe_leg_acc_dis', 'fun_dis', 'tra_to_oth_aut_com',\n",
+       "       'can_loa_rep', 'oth_loa_rep', 'tot_loa_rep', 'ind_ref', 'par_com_ref',\n",
+       "       'oth_com_ref', 'tot_con_ref', 'oth_dis', 'tot_dis',\n",
+       "       'cas_on_han_beg_of_per', 'cas_on_han_clo_of_per', 'net_con',\n",
+       "       'net_ope_exp', 'deb_owe_by_com', 'deb_owe_to_com', 'cov_sta_dat',\n",
+       "       'cov_end_dat', 'winner', 'votes'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f4ea7a56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>can_nam</th>\n",
+       "      <th>can_off</th>\n",
+       "      <th>can_off_sta</th>\n",
+       "      <th>can_off_dis</th>\n",
+       "      <th>can_par_aff</th>\n",
+       "      <th>can_inc_cha_ope_sea</th>\n",
+       "      <th>winner</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ALLEN, RICHARD W</td>\n",
+       "      <td>H</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>EVANS, DWIGHT</td>\n",
+       "      <td>H</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>CHALLENGER</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RUTHERFORD, JOHN</td>\n",
+       "      <td>H</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ZINKE, RYAN K</td>\n",
+       "      <td>H</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>LEE, BARBARA</td>\n",
+       "      <td>H</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>INCUMBENT</td>\n",
+       "      <td>Y</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1809</th>\n",
+       "      <td>BUTTOCKS, SYDNEYS VOLUPTOUS</td>\n",
+       "      <td>P</td>\n",
+       "      <td>US</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>IND</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1810</th>\n",
+       "      <td>MOLNAR, ROBERT</td>\n",
+       "      <td>S</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1811</th>\n",
+       "      <td>HOLMES, GREGORY</td>\n",
+       "      <td>S</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>REP</td>\n",
+       "      <td>OPEN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1812</th>\n",
+       "      <td>HUNKIN-FINAU, VAITINASA SALU</td>\n",
+       "      <td>H</td>\n",
+       "      <td>AS</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1813</th>\n",
+       "      <td>LINDBECK, STEVE</td>\n",
+       "      <td>H</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>DEM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1814 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           can_nam can_off can_off_sta  can_off_dis  \\\n",
+       "0                 ALLEN, RICHARD W       H          GA         12.0   \n",
+       "1                    EVANS, DWIGHT       H          PA          2.0   \n",
+       "2                 RUTHERFORD, JOHN       H          FL          4.0   \n",
+       "3                    ZINKE, RYAN K       H          MT          0.0   \n",
+       "4                     LEE, BARBARA       H          CA         13.0   \n",
+       "...                            ...     ...         ...          ...   \n",
+       "1809   BUTTOCKS, SYDNEYS VOLUPTOUS       P          US          0.0   \n",
+       "1810                MOLNAR, ROBERT       S          CA          0.0   \n",
+       "1811               HOLMES, GREGORY       S          MD          0.0   \n",
+       "1812  HUNKIN-FINAU, VAITINASA SALU       H          AS          NaN   \n",
+       "1813               LINDBECK, STEVE       H          AK          NaN   \n",
+       "\n",
+       "     can_par_aff can_inc_cha_ope_sea winner  \n",
+       "0            REP           INCUMBENT      Y  \n",
+       "1            DEM          CHALLENGER      Y  \n",
+       "2            REP                OPEN      Y  \n",
+       "3            REP           INCUMBENT      Y  \n",
+       "4            DEM           INCUMBENT      Y  \n",
+       "...          ...                 ...    ...  \n",
+       "1809         IND                OPEN    NaN  \n",
+       "1810         REP                OPEN    NaN  \n",
+       "1811         REP                OPEN    NaN  \n",
+       "1812         DEM                 NaN    NaN  \n",
+       "1813         DEM                 NaN    NaN  \n",
+       "\n",
+       "[1814 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['can_nam', 'can_off', 'can_off_sta', 'can_off_dis', 'can_par_aff', 'can_inc_cha_ope_sea', 'ind_con', 'tot_con', '', 'winner']]"
    ]
   }
  ],
